<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/ic_nav_news"
            android:title="@string/nav_news"/>

        <item
            android:id="@+id/nav_photos"
            android:icon="@mipmap/ic_nav_picture"
            android:title="@string/nav_photos"/>

        <item
            android:id="@+id/nav_videos"
            android:icon="@mipmap/ic_nav_video"
            android:title="@string/nav_videos"/>

    </group>

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_night"
            android:title="@string/nav_night"
            />

        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_nav_setting"
            android:title="@string/nav_setting"/>
    </group>
</menu>